[gd_scene load_steps=3 format=3 uid="uid://cj6rfw2cxhi0t"]

[ext_resource type="Script" path="res://Hitboxes and Hurtboxes/Hurtboxes.gd" id="1_s7k7c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e6rbv"]
size = Vector2(17, 17)

[node name="Hurtboxes" type="Area2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_s7k7c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -1.5)
shape = SubResource("RectangleShape2D_e6rbv")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="invincibility_ended" from="." to="." method="_on_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
